# fretmaster

./: .eslintrc  .gitignore  AUDIO_COMPARISON.md  DEPLOY.md  DEPLOYMENT.md  LICENSE  README.md  ROUTER-DEPLOY.md  SOLO_vs_FretMaster_Comparison_Report2.md  STATS-README.md  TUTORIAL.md  WINDOWS_AUDIO_SETTINGS.md  __next.__PAGE__.txt  __next._head.txt  __next._tree.txt  cgi-stats-fixed.sh  deploy-edgeone.ps1  deploy-edgeone.sh  deploy-router.md  deploy-to-router.ps1  fretmaster-lighttpd.conf  index.html  index.txt  manifest.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  solo-vs-fretmaster-comparison.md  tsconfig.json  vitest.config.ts  windres.bat
.cargo/: config.toml
404/: index.html
__tests__/: chord-theory.test.ts  music-theory.test.ts  setup.ts  tuner-pitch-detection.test.ts
_edgeone/: pages.json
_not-found/: __next._head.txt  __next._index.txt  __next._not-found.txt  __next._tree.txt  index.txt
app/: globals.css  layout.tsx  page.tsx
components/: client-only.tsx  custom-song-editor-ui.tsx  debug-panel.tsx  error-boundary.tsx  focus-mode.tsx  layout-shell.tsx  metronome-visualizer.tsx  piano-keyboard.tsx  stats-panel.tsx  title-bar.tsx  virtual-list.tsx  windows-audio-settings.tsx
dist-tauri/: 404.html  __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
js/: app.js  audio-worker.js  audio-worklet-processor.js  audio.js  config.js  device-manager.js  (+12 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: audio_simulation.rs  debug_yin.rs
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  device.rs  device_monitor.rs  mod.rs  pipeline.rs  pitch.rs  pitch_tests.rs  preprocessor.rs
src-tauri/src/commands/: audio_commands.rs  db_commands.rs  mod.rs  window_commands.rs
src-tauri/src/db/: mod.rs  stats.rs
(+82 files in other folders)
