[package]
name = "fretmaster"
version = "0.2.0"
description = "FretMaster - Professional Guitar Fretboard Practice Tool"
authors = ["FretMaster Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 音频处理
cpal = "0.15"
rubato = "0.15"
dasp = { version = "0.11", features = ["signal", "interpolate"] }
rustfft = "6.2"

# 并发和性能
parking_lot = "0.12"
crossbeam = "0.8"
tokio = { version = "1", features = ["full"] }

# 日志
log = "0.4"
env_logger = "0.11"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
