[package]
name = "fretmaster"
version = "0.2.70"
description = "FretMaster - Professional Guitar Fretboard Practice Tool"
authors = ["FretMaster Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

cpal = "0.15"
rustfft = "6.2"

parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }

log = "0.4"
env_logger = "0.11"

anyhow = "1.0"
thiserror = "1.0"

# SQLite database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
once_cell = "1.20"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
